# Message-queue

./: CMakeLists.txt
common/: common.h  message_info.proto
src_client/: client.cpp
src_server/: server.cpp
